--- a/.gitignore
+++ b/.gitignore
@@ -112,7 +112,6 @@ ENV/
 
 # Mongo Explorer plugin:
 .idea/mongoSettings.xml
-.idea/*
 
 ## File-based project format:
 *.iws
@@ -133,3 +132,5 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+.idea/
+.pypirc
